tenant, tenant management and contract need to work on it